# NetEase

./: .env  .gitignore  README.md  pyproject.toml
.github/workflows/: github-actions-demo.yml
docker/: compose.yaml  net.dockerfile  streamlit.dockerfile
docker/services/: netease.yaml  streamlit.yaml
k8s/: configmap.yml  deployment.yml  hpa.yml  ingress.yml  issuer.yml  service.yml
src/cat/api/: dependencies.py  main.py
src/cat/api/routers/: net_ease.py
src/cat/common/config/: __init__.py  base.py
src/cat/core/net_ease/: constants.py  controller.py  dto.py  entities.py  services.py
tests/core/netease/: test_controller.py  test_services.py
